vs项目2个错误修改

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,13 @@ tools/jenkins_scripts/mac/android/userconf.ini
 
 # CTags
 tags
+SampleChangeEquip/proj.win32/SampleChangeEquip.sln
+SampleChangeEquip/proj.win32/SampleChangeEquip.vcxproj
+SampleChangeEquip/proj.win32/SampleChangeEquip.vcxproj.filters
+SampleChangeEquip/proj.win32/SampleChangeEquip.vcxproj.user
+SampleChangeEquip/proj.win32/main.cpp
+SampleChangeEquip/proj.win32/main.h
+SampleCollision/proj.win32/SampleCollision.sln
+SampleCollision/proj.win32/SampleCollision.vcxproj
+SampleCollision/proj.win32/SampleCollision.vcxproj.filters
+SampleCollision/proj.win32/SampleCollision.vcxproj.user
