--- a/SampleCollision/proj.linux/Makefile
+++ b/SampleCollision/proj.linux/Makefile
@@ -4,7 +4,9 @@ INCLUDES = -I.. -I../Classes
 
 SOURCES = main.cpp \
         ../Classes/AppDelegate.cpp \
-        ../Classes/HelloWorldScene.cpp
+        ../Classes/HelloWorldScene.cpp	\
+	../Classes/GLES-Render.cpp	\
+	../Classes/TestColliderDetector.cpp
 
 COCOS_ROOT = ../../cocos2d-x
 include $(COCOS_ROOT)/cocos2dx/proj.linux/cocos2dx.mk
