--- a/SampleUIAnimation/proj.linux/Makefile
+++ b/SampleUIAnimation/proj.linux/Makefile
@@ -4,7 +4,8 @@ INCLUDES = -I.. -I../Classes
 
 SOURCES = main.cpp \
         ../Classes/AppDelegate.cpp \
-        ../Classes/HelloWorldScene.cpp
+        ../Classes/HelloWorldScene.cpp	\
+	../Classes/CocosGUIExamplesUIAnimationScene.cpp
 
 COCOS_ROOT = ../../cocos2d-x
 include $(COCOS_ROOT)/cocos2dx/proj.linux/cocos2dx.mk
