--- a/DemoFishingJoy/proj.linux/Makefile
+++ b/DemoFishingJoy/proj.linux/Makefile
@@ -4,6 +4,7 @@ INCLUDES = -I.. -I../Classes
 
 SOURCES = main.cpp \
         ../Classes/AppDelegate.cpp \
+        ../Classes/VisibleRect.cpp \
         ../Classes/HelloWorldScene.cpp
 
 COCOS_ROOT = ../../cocos2d-x
