--- a/DemoShop/proj.ios/Info.plist
+++ b/DemoShop/proj.ios/Info.plist
@@ -37,9 +37,13 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
