--- a/SampleImageViewer/proj.ios/Info.plist
+++ b/SampleImageViewer/proj.ios/Info.plist
@@ -37,9 +37,15 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array/>
+	<key>UIStatusBarHidden</key>
+	<true/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleDefault</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
