Updated the projects from CocosStudio which have BuildId of 2.1.0.0

--- a/CocosStudioProjects/crossplatform_UIScrollView_Horizontal_Editor_1/crossplatform_UIScrollView_Horizontal_Editor_1.cfg
+++ b/CocosStudioProjects/crossplatform_UIScrollView_Horizontal_Editor_1/crossplatform_UIScrollView_Horizontal_Editor_1.cfg
@@ -1,1 +1,6 @@
-﻿<Properties publishHasCocos2dxCode="False" PublishDirectory="res" SolutionSize="480 * 320" DefaultSerializer="Serializer_FlatBuffers" />
+﻿<Properties publishHasCocos2dxCode="False" PublishDirectory="res" SolutionSize="480 * 320" DefaultSerializer="Serializer_FlatBuffers">
+  <OpenedDocuments>
+    <FilePathData Path="crossplatform_UIScrollView_Horizontal_Editor_1.csd" />
+  </OpenedDocuments>
+  <ActiveDocuments Path="crossplatform_UIScrollView_Horizontal_Editor_1.csd" />
+</Properties>
